--- a/templates/firstname.html
+++ b/templates/firstname.html
@@ -1,1 +1,12 @@
-<h1>Enter ur name</h1>
+<h1>What's Your Name?</h1>
+	<br/>
+	<form method="POST">
+		{{ form.hidden_tag() }}
+
+		{{ form.name.label }}
+
+		{{ form.name() }}
+		<br/>
+		
+		{{ form.submit() }}
+    </form>
