--- a/templates/404.html
+++ b/templates/404.html
@@ -1,1 +1,3 @@
-<h1>Whats up brudda? This page cannot be found brudda</h1>
+<link rel="stylesheet" href="styles.css">
+
+<h1>wrong page mate gday mate</h1>
